combined modules and added parent pom.xml